--- a/Senai-Full-Stack/BackEnd/UC 12 - Codificacao para backend/SA2 - Desenvolvimento de sistemas web/Aulasrefeitas/ER2 - Criação de Classes e instalação do dotnet/ER2 - Criação de Classes e instalação do dotnet.csproj
+++ b/Senai-Full-Stack/BackEnd/UC 12 - Codificacao para backend/SA2 - Desenvolvimento de sistemas web/Aulasrefeitas/ER2 - Criação de Classes e instalação do dotnet/ER2 - Criação de Classes e instalação do dotnet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>ER2___Criação_de_Classes_e_instalação_do_.NET__C__</RootNamespace>
+    <RootNamespace>ER2___Criação_de_Classes_e_instalação_do_dotnet</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
